# CppSdl3

./: CMakeLists.txt  CMakePresets.json  CppSdl3Config.cmake.in  LICENSE.txt  README.md  compile_shaders.py  cppsdl3.natstepfilter  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
CppSdl3_Example/: CMakeLists.txt
CppSdl3_Example/src/: main.cpp  testimguiwindow.cpp  testimguiwindow.h  testwindow.cpp  testwindow.h  vertex.dxil
CppSdl3_Test/: CMakeLists.txt
ImGui/: CMakeLists.txt
ImGui/src/: imgui_user.h
src/sdl/: batch.h  color.h  font.cpp  font.h  gamecontroller.cpp  gamecontroller.h  glm.cpp  glm.h  gpu.h  gpuutil.cpp  gpuutil.h  imageatlas.cpp  imageatlas.h  imguiauxiliary.cpp  imguiauxiliary.h  imguiwindow.cpp  imguiwindow.h  initsdl.cpp  initsdl.h  rect.h  sdlexception.h  sdlgpu.h  shader.cpp  shader.h  shader.ps.h  shader.ps.hlsl  shader.vs.h  shader.vs.hlsl  surface.cpp  surface.h  texture.cpp  texture.h  util.cpp  util.h  window.cpp  window.h
src/sdl/gpu/: gpucontext.cpp  gpucontext.h  gpuresource.h  gpuutil.cpp  gpuutil.h  sdlgpu.h
